# mcp-transport-auth

./: README.md  pyproject.toml
mcp_transport_auth/: __main__.py  basic_auth_transport.py  client.py  server.py
