[project]
name = "mcp-transport-auth"
version = "0.1.0"
description = "A simple MCP server exposing a website fetching tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Daiki Watanabe", email = "daikw@yak-shaver.com" }]
keywords = ["mcp", "llm", "automation", "basic-auth"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "anyio>=4.6.2.post1",
    "click>=8.1.7",
    "httpx>=0.27.2",
    "mcp>=1.1.1",
]

[project.scripts]
mcp-transport-auth = "mcp_transport_auth.server:main"
mcp-transport-auth-client = "mcp_transport_auth.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_transport_auth"]

[tool.pyright]
include = ["mcp_transport_auth"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
